@@ -41,7 +41,10 @@
 <li>coders/png.c (ReadMNGImage): Fix off-by-one in length validation
 for TERM chunk which allowed one byte heap read overflow.  Fixes
 oss-fuzz 8615 &quot;graphicsmagick/coder_MNG_fuzzer:
-Heap-buffer-overflow in mng_get_long&quot;. (Credit to OSS-Fuzz)</li>
+Heap-buffer-overflow in mng_get_long&quot;. (Credit to OSS-Fuzz)
+(ReadMNGImage): Fix leak of MngInfo in error reporting path.
+Fixes oss-fuzz 8604 &quot;graphicsmagick/coder_MNG_fuzzer: Direct-leak
+in ReadMNGImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/tiff.c (ReadTIFFImage): Reject files with excessive
 samples-per-pixel or extra-samples. Avoids potential issues
 observed in oss-fuzz 8634 &quot;graphicsmagick/coder_BIGTIFF_fuzzer:
